# auracle-ide

./: Cargo.toml  FORK_CHANGES.md  REPO_RULES.md
.github/workflows/: auracle-build-mac.yml  mac-xcode-probe.yml
assets/keymaps/: default-linux.json  default-macos.json  default-windows.json
assets/settings/: default.json  initial_user_settings.json
assets/themes/auracle/: auracle.json
crates/acp_thread/src/: connection.rs
crates/agent/src/: agent.rs  native_agent_server.rs  tool_permissions.rs
crates/agent_servers/src/: acp.rs
crates/agent_ui/: Cargo.toml
crates/agent_ui/src/: agent_configuration.rs  agent_diff.rs  agent_panel.rs  agent_ui.rs  config_options.rs  conversation_view.rs  language_model_selector.rs  mode_selector.rs  test_support.rs  thread_import.rs  threads_archive_view.rs
crates/ai_onboarding/src/: ai_onboarding.rs  plan_definitions.rs  young_account_banner.rs
crates/auracle_account/: Cargo.toml
crates/auracle_account/src/: auracle_account.rs
crates/auracle_actions/: Cargo.toml
crates/auracle_actions/src/: auracle_actions.rs
crates/auracle_agent_commands/: Cargo.toml
crates/auracle_agent_commands/src/: auracle_agent_commands.rs
crates/auracle_ai_settings/: Cargo.toml
crates/auracle_ai_settings/src/: auracle_ai_settings.rs
crates/auracle_artifact/: Cargo.toml
crates/auracle_artifact/src/: auracle_artifact.rs
crates/auracle_backtest_results/: Cargo.toml
crates/auracle_backtest_results/src/: auracle_backtest_results.rs
crates/auracle_brand/: Cargo.toml
crates/auracle_brand/src/: auracle_brand.rs
crates/auracle_chart_layout/: Cargo.toml
crates/auracle_chart_layout/src/: auracle_chart_layout.rs
crates/auracle_charts/: Cargo.toml
crates/auracle_charts/src/: auracle_charts.rs
crates/auracle_cockpit/: Cargo.toml
crates/auracle_cockpit/src/: auracle_cockpit.rs
crates/auracle_cockpit_state/: Cargo.toml
crates/auracle_cockpit_state/src/: auracle_cockpit_state.rs
crates/auracle_connect/: Cargo.toml
crates/auracle_connect/src/: auracle_connect.rs
crates/auracle_connect_state/: Cargo.toml
crates/auracle_connect_state/src/: auracle_connect_state.rs
crates/auracle_connections/: Cargo.toml
crates/auracle_connections/src/: auracle_connections.rs
crates/auracle_data_sources/: Cargo.toml
crates/auracle_data_sources/src/: auracle_data_sources.rs
crates/auracle_deploy_gate/: Cargo.toml
crates/auracle_deploy_gate/src/: auracle_deploy_gate.rs
crates/auracle_desk/: Cargo.toml
crates/auracle_desk/src/: auracle_desk.rs
crates/auracle_desk_panel/: Cargo.toml
crates/auracle_desk_panel/src/: auracle_desk_panel.rs
crates/auracle_feeds/: Cargo.toml
crates/auracle_feeds/src/: auracle_feeds.rs
crates/auracle_flow/: Cargo.toml
crates/auracle_flow/src/: auracle_flow.rs
crates/auracle_flow_panel/: Cargo.toml
crates/auracle_flow_panel/src/: auracle_flow_panel.rs
crates/auracle_live/: Cargo.toml
crates/auracle_live/src/: auracle_live.rs
crates/auracle_live_deploy/: Cargo.toml
crates/auracle_live_deploy/src/: auracle_live_deploy.rs
crates/auracle_live_ui/: Cargo.toml
crates/auracle_live_ui/src/: auracle_live_ui.rs  deploy_wizard.rs
crates/auracle_onboarding/: Cargo.toml
crates/auracle_onboarding/src/: auracle_onboarding.rs  settings_panel.rs
crates/auracle_panel_common/: Cargo.toml
crates/auracle_panel_common/src/: auracle_panel_common.rs
crates/auracle_pill/: Cargo.toml
crates/auracle_pill/src/: auracle_pill.rs
crates/auracle_qc_import/: Cargo.toml
crates/auracle_qc_import/src/: auracle_qc_import.rs
crates/auracle_qc_import_view/: Cargo.toml
crates/auracle_qc_import_view/src/: auracle_qc_import_view.rs
crates/auracle_runway/: Cargo.toml
crates/auracle_runway/src/: auracle_runway.rs
crates/auracle_schedules/: Cargo.toml
crates/auracle_schedules/src/: auracle_schedules.rs
crates/auracle_session/: Cargo.toml
crates/auracle_session/src/: auracle_session.rs
crates/auracle_settings_nav/: Cargo.toml
crates/auracle_settings_nav/src/: auracle_settings_nav.rs
crates/auracle_spec_compiler/: Cargo.toml
crates/auracle_spec_compiler/src/: auracle_spec_compiler.rs
crates/auracle_status/: Cargo.toml
crates/auracle_status/src/: auracle_status.rs
crates/auracle_status_view/: Cargo.toml
crates/auracle_status_view/src/: auracle_status_view.rs
crates/auracle_strategies/: Cargo.toml
crates/auracle_strategies/src/: auracle_strategies.rs
crates/auracle_studio_results/: Cargo.toml
crates/auracle_studio_results/src/: auracle_studio_results.rs
crates/auracle_system_prompt/: Cargo.toml
crates/auracle_system_prompt/src/: auracle_system_prompt.rs
crates/auracle_validation/: Cargo.toml
crates/auracle_validation/src/: auracle_validation.rs
crates/auracle_view_state/: Cargo.toml  RUBRIC.md
crates/auracle_view_state/src/: auracle_view_state.rs
crates/auto_update/src/: auto_update.rs
crates/auto_update_helper/src/: dialog.rs
crates/blotter_panel/: Cargo.toml
crates/blotter_panel/src/: blotter_panel.rs
crates/cli/src/: main.rs
crates/client/src/: telemetry.rs  zed_urls.rs
crates/cloud_api_client/src/: cloud_api_client.rs
crates/command_palette/src/: command_palette.rs
crates/context_server/src/: context_server.rs  oauth.rs
crates/copilot_ui/src/: sign_in.rs
crates/dap/src/: transport.rs
crates/edit_prediction/src/: zeta.rs  (+2 more)
crates/etw_tracing/: etw_tracing.rs
crates/extension_host/: Cargo.toml
crates/incidents_panel/: Cargo.toml
crates/language_models/: Cargo.toml
crates/runs_dock/: Cargo.toml
crates/runs_dock/src/: runs_dock.rs
crates/runway_rail/: Cargo.toml
crates/runway_rail/src/: runway_rail.rs
crates/schedules_panel/: Cargo.toml
crates/settings_ui/: Cargo.toml
crates/strategies_panel/: Cargo.toml
crates/strategies_panel/src/: strategies_panel.rs
crates/theme_importer/: Cargo.toml
crates/title_bar/: Cargo.toml
crates/toolchain_selector/: Cargo.toml
crates/validation_rail/: Cargo.toml
crates/validation_rail/src/: validation_rail.rs
crates/zed/: Cargo.toml
script/: bundle-mac  debug-cli  zed-local
(+128 files in other folders)
