[package]
name = "auracle_actions"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_actions.rs"
doctest = false

[lints]
workspace = true

[dependencies]
auracle_connections.workspace = true
http_client.workspace = true
serde_json.workspace = true
