[package]
name = "auracle_agent_commands"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_agent_commands.rs"
doctest = false

[lints]
workspace = true

[dependencies]
agent_ui.workspace = true
anyhow.workspace = true
auracle_connect.workspace = true
auracle_connections.workspace = true
futures.workspace = true
http_client.workspace = true
serde_json.workspace = true
gpui.workspace = true
ui.workspace = true
workspace.workspace = true
