[package]
name = "auracle_backtest_results"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_backtest_results.rs"
doctest = false

[lints]
workspace = true

[dependencies]
gpui.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
