[package]
name = "auracle_cockpit"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_cockpit.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
auracle_actions.workspace = true
auracle_backtest_results.workspace = true
auracle_cockpit_state.workspace = true
auracle_connections.workspace = true
auracle_studio_results.workspace = true
editor.workspace = true
gpui.workspace = true
http_client.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
