[package]
name = "auracle_deploy_gate"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_deploy_gate.rs"
doctest = false

[lints]
workspace = true

[dependencies]
auracle_connections.workspace = true
http_client.workspace = true
