[package]
name = "auracle_flow_panel"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_flow_panel.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
auracle_connect.workspace = true
auracle_connections.workspace = true
auracle_flow.workspace = true
auracle_strategies.workspace = true
auracle_studio_results.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
