[package]
name = "auracle_live_ui"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lints]
workspace = true

[lib]
path = "src/auracle_live_ui.rs"

[dependencies]
anyhow.workspace = true
auracle_connect.workspace = true
auracle_connections.workspace = true
auracle_live.workspace = true
auracle_panel_common.workspace = true
editor.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
