[package]
name = "auracle_panel_common"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_panel_common.rs"
doctest = false

[lints]
workspace = true

[dependencies]
auracle_connect.workspace = true
gpui.workspace = true
ui.workspace = true
