[package]
name = "auracle_qc_import_view"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_qc_import_view.rs"
doctest = false

[lints]
workspace = true

[dependencies]
auracle_connections.workspace = true
auracle_qc_import.workspace = true
gpui.workspace = true
serde.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
