[package]
name = "auracle_status"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/auracle_status.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
auracle_connect.workspace = true
auracle_status_view.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
serde_json.workspace = true
ui.workspace = true
util.workspace = true
workspace.workspace = true
