[package]
name = "validation_rail"
version = "0.1.0"
edition.workspace = true
publish.workspace = true
license = "GPL-3.0-or-later"

[lib]
path = "src/validation_rail.rs"
doctest = false

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
auracle_connect.workspace = true
futures.workspace = true
gpui.workspace = true
http_client.workspace = true
serde_json.workspace = true
ui.workspace = true
workspace.workspace = true
